<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_list"
        android:icon="@drawable/ic_list"
        android:title="@string/menu_listview"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_account"
        android:title="@string/menu_account"
        app:showAsAction="never">

        <menu>

            <item android:id="@+id/menu_acct_connct"
                android:title="@string/submenu_con"
                app:showAsAction="never"/>

            <item android:id="@+id/menu_acct_disconnct"
                android:title="@string/submenu_dis"
                app:showAsAction="never"/>

        </menu>

    </item>

</menu>