<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginBottom="199dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <Button
        android:id="@+id/cont_button"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginBottom="199dp"
        android:background="@color/colorAccent"
        android:text="@string/cont"
        android:typeface="monospace"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>