<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <!-- Wrapping linear layout for no under -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Overlay for scrolling -->

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            tools:ignore="MissingConstraints">

            <include
                android:id="@+id/toolbar_add"
                layout="@layout/toolbar"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:layout_marginBottom="10pt"
            android:layout_marginTop="10pt"
            android:scrollbars="vertical"
            android:foregroundGravity="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Title of task -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/title">
                    </TextView>

                    <EditText
                        android:id="@+id/task_title"
                        android:layout_gravity="right"
                        android:layout_marginLeft="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:hint="@string/title_input">
                    </EditText>
                </LinearLayout>

                <!-- Location of task -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/location">
                        </TextView>

                        <ImageView
                            android:layout_marginTop="4sp"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add_location">
                        </ImageView>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/task_location"
                        android:layout_gravity="right"
                        android:layout_marginLeft="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:hint="@string/location_input">
                    </EditText>
                </LinearLayout>

                <!-- Date of task -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/date">
                        </TextView>

                        <ImageView
                            android:layout_marginTop="4sp"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add_date">
                        </ImageView>

                    </LinearLayout>

                    <DatePicker
                        android:id="@+id/task_date"
                        android:layout_gravity="right"
                        android:layout_marginLeft="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:datePickerMode="spinner"
                        android:textSize="18sp"
                        android:calendarViewShown="false">
                    </DatePicker>
                </LinearLayout>

                <!-- Description of task -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/description">
                        </TextView>

                        <ImageView
                            android:layout_marginTop="4sp"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add_description">
                        </ImageView>

                    </LinearLayout>

                    <EditText
                        android:id="@+id/task_description"
                        android:layout_gravity="right"
                        android:layout_marginLeft="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description_input"
                        android:inputType="textMultiLine"
                        android:lines="5">
                    </EditText>
                </LinearLayout>

                <!-- Save button -->

                <Button
                    android:id="@+id/save_task"
                    android:layout_marginTop="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textColor="#FBFDFD"
                    android:textSize="20sp"
                    android:onClick="sendTaskInfo"
                    android:layout_width="fill_parent"
                    android:background="@drawable/ic_icons_background">
                </Button>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>