<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/toolbar_settings"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:background="#07000000"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp">

                <Switch
                    android:id="@+id/switchPushNotifications"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/switch_push_notifications"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="#07000000"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp">

                <LinearLayout
                    android:id="@+id/layoutNotificationRange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_notification_range"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/textNotificationRange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/questionNotification"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/button_notification"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_help" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="#07000000"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp">

                <LinearLayout
                    android:id="@+id/layoutReminderRange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_reminder_range"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/textReminderRange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="25sp" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/questionReminder"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/button_reminder"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_help" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="#07000000"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_distance"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/measurementUnits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/alarmIDLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="#07000000"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_alarm"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/alarmID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/alarmSoundLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="#07000000"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_alarm_sound"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/alarmSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>